[package]
name = "dev-workspaces"
version = "0.2.0"
edition = "2021"
description = "A dev tool to simplify working with workspace directories"
repository = "https://github.com/czifro/dev-workspaces"
authors = ["Will Czifro wiil@czifro.me"]
documentation = "https://docs.rs/dev-workspaces"
license = "MIT"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
home = "0.5.9"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"

[dev-dependencies]
rstest = "0.18.2"
